<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    tools:context=".activity.MainActivity">


    <com.facebook.shimmer.ShimmerFrameLayout

        android:id="@+id/shimmer_view_container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        shimmer:duration="800">

        <!-- Adding 3 rows of placeholders -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/todo_placeholder_item" />

            <include layout="@layout/todo_placeholder_item" />

            <include layout="@layout/todo_placeholder_item" />

        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTodoList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"/>


    <TextView
        android:id="@+id/text_went_wrong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="20sp"
        android:padding="@dimen/padding_10"
        android:textColor="#555555"
        android:text="@string/something_went_wrong"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_another_try"
         />

    <TextView
        android:id="@+id/text_another_try"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_10"
        android:gravity="center"
        android:textSize="14sp"
        android:textColor="#414A4C"
        android:text="@string/give_it_another_try"
        app:layout_constraintTop_toBottomOf="@+id/text_went_wrong"
        app:layout_constraintBottom_toTopOf="@id/text_reload" />

    <TextView
        android:id="@+id/text_reload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_10"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/reload"
        android:textSize="14sp"
        android:textColor="#0198E1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_another_try"
         />

    <androidx.constraintlayout.widget.Group
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="text_went_wrong,text_another_try,text_reload"
        android:id="@+id/group_no_internet" />

</androidx.constraintlayout.widget.ConstraintLayout>